--- a/kong-mesh/kong-mesh-sidecar-scc.yaml
+++ b/kong-mesh/kong-mesh-sidecar-scc.yaml
@@ -6,10 +6,8 @@ allowHostPorts: false
 allowPrivilegeEscalation: false
 allowPrivilegedContainer: false
 allowedCapabilities:
-- NET_BIND_SERVICE
-- SETGID
-- SETUID
-- FSETID
+- NET_ADMIN
+- NET_RAW
 apiVersion: security.openshift.io/v1
 defaultAddCapabilities: null
 fsGroup:
@@ -23,7 +21,7 @@ readOnlyRootFilesystem: false
 requiredDropCapabilities: 
 - ALL
 runAsUser:
-  type: MustRunAsNonRoot
+  type: RunAsAny
 seLinuxContext:
   type: MustRunAs
 seccompProfiles:
