--- a/kong-mesh/kong-mesh-sidecar-scc-cni.yaml
+++ b/kong-mesh/kong-mesh-sidecar-scc-cni.yaml
@@ -6,8 +6,7 @@ allowHostPorts: false
 allowPrivilegeEscalation: false
 allowPrivilegedContainer: false
 allowedCapabilities:
-- NET_ADMIN
-- NET_RAW
+- NET_BIND_SERVICE
 apiVersion: security.openshift.io/v1
 defaultAddCapabilities: null
 fsGroup:
