--- a/kong-mesh/kong-mesh-sidecar-scc.yaml
+++ b/kong-mesh/kong-mesh-sidecar-scc.yaml
@@ -6,6 +6,7 @@ allowHostPorts: false
 allowPrivilegeEscalation: false
 allowPrivilegedContainer: false
 allowedCapabilities:
+- NET_BIND_SERVICE
 - NET_ADMIN
 - NET_RAW
 apiVersion: security.openshift.io/v1
