--- a/kuma-demo/kuma-demo-aio-ocp.yaml
+++ b/kuma-demo/kuma-demo-aio-ocp.yaml
@@ -6,14 +6,6 @@ metadata:
   labels:
     kuma.io/sidecar-injection: enabled
 ---
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: kuma-demo-postgres
-  namespace: kuma-demo
-  labels:
-    app: postgres
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -41,6 +33,8 @@ spec:
           value: kumademo
         - name: POSTGRES_DB
           value: kumademo
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
         resources:
           requests:
             cpu: 100m
@@ -48,11 +42,14 @@ spec:
           limits:
             cpu: 150m
             memory: 256Mi
+        volumeMounts:
+        - mountPath: /var/lib/postgresql/data
+          name: pgdata
         ports:
         - containerPort: 5432
-        securityContext:
-          allowPrivilegeEscalation: true
-      serviceAccount: kuma-demo-postgres
+      volumes:
+      - emptyDir: {}
+        name: pgdata
 ---
 apiVersion: v1
 kind: Service
